--- a/index-first.html
+++ b/index-first.html
@@ -18,9 +18,11 @@
 
             <div class="banner-text">
                 <h1>The Greatest Show On <br> The Entire World</h1>
-                <p>The 2022 FIFA World Cup is scheduled to be the <br> 22nd running of the FIFA World Cup competition, the quadrennial <br> international men's football championship <br> contested by the senior national teams of the member associations of FIFA.</p>
+                <p>The 2022 FIFA World Cup is scheduled to be the <br> 22nd running of the FIFA World Cup competition,
+                    the quadrennial <br> international men's football championship <br> contested by the senior national
+                    teams of the member associations of FIFA.</p>
                 <div class="go-center">
-                    <button id="banner-button"> watch live <i class="fa fa-thin fa-arrow-right"></i></button>
+                    <button id="banner-button"> watch live <i class="fa-solid fa-angle-right"></i></button>
                 </div>
             </div>
             <div class="banner-img">
@@ -35,12 +37,10 @@
         <section class="blogs-container">
             <div class="left-side">
                 <div class="button-div">
-                    <a href="" target="_blank"><span
-                            class="link-button">Upcoming
+                    <a href="index-second.html" target="_blank"><span class="link-button">Upcoming
                         </span></a>
                     <a href="#"><span class="link-button">All Group</span></a>
-                    <a href="#" target="_blank"><span
-                            class="link-button color-1">Blog</span></a>
+                    <a href="#" target="_blank"><span class="link-button color-1">Blog</span></a>
 
                 </div>
             </div>
@@ -191,8 +191,8 @@
                 <li><a href="#">Goal Live</a></li>
             </ul>
         </nav>
-        </footer>
-        <!----------------------footer end----------------------- -->
+    </footer>
+    <!----------------------footer end----------------------- -->
 </body>
 
 </html>
