--- a/index-second.html
+++ b/index-second.html
@@ -18,9 +18,11 @@
 
             <div class="banner-text">
                 <h1>The Greatest Show On <br> The Entire World</h1>
-                <p>The 2022 FIFA World Cup is scheduled to be the <br> 22nd running of the FIFA World Cup competition, the quadrennial <br> international men's football championship <br> contested by the senior national teams of the member associations of FIFA.</p>
+                <p>The 2022 FIFA World Cup is scheduled to be the <br> 22nd running of the FIFA World Cup competition,
+                    the quadrennial <br> international men's football championship <br> contested by the senior national
+                    teams of the member associations of FIFA.</p>
                 <div class="go-center">
-                    <button id="banner-button"> watch live <i class="fa fa-thin fa-arrow-right"></i></button>
+                    <button id="banner-button"> watch live <i class="fa-solid fa-angle-right"></i></button>
                 </div>
             </div>
             <div class="banner-img">
@@ -30,17 +32,15 @@
         </section>
     </header>
     <main>
-       <!--------------------------form and  blogs start----------------------------- -->
+        <!--------------------------form and  blogs start----------------------------- -->
 
         <section class="blogs-container">
             <div class="left-side">
                 <div class="button-div">
-                    <a href="#" target="_blank"><span
-                            class="link-button color-2">Upcoming
+                    <a href="#" target="_blank"><span class="link-button color-2">Upcoming
                         </span></a>
                     <a href="#"><span class="link-button">All Group</span></a>
-                    <a href="" target="_blank"><span
-                            class="link-button">Blog</span></a>
+                    <a href="" target="_blank"><span class="link-button">Blog</span></a>
 
                 </div>
             </div>
@@ -125,7 +125,7 @@
             </ul>
         </nav>
     </footer>
-     <!----------------------footer end----------------------- -->
+    <!----------------------footer end----------------------- -->
 </body>
 
 </html>
