--- a/index-first.html
+++ b/index-first.html
@@ -39,8 +39,8 @@
                 <div class="button-div">
                     <a href="index-second.html" target="_blank"><span class="link-button">Upcoming
                         </span></a>
-                    <a href="#"><span class="link-button">All Group</span></a>
-                    <a href="#" target="_blank"><span class="link-button color-1">Blog</span></a>
+                    <a href="index-second.html"><span class="link-button">All Group</span></a>
+                    <a href="index-second.html" target="_blank"><span class="link-button color-1">Blog</span></a>
 
                 </div>
             </div>
