--- a/index-first.html
+++ b/index-first.html
@@ -40,7 +40,7 @@
                     <a href="index-second.html" target="_blank"><span class="link-button">Upcoming
                         </span></a>
                     <a href="index-second.html"><span class="link-button">All Group</span></a>
-                    <a href="index-second.html" target="_blank"><span class="link-button color-1">Blog</span></a>
+                    <a href="index-first.html" target="_blank"><span class="link-button color-1">Blog</span></a>
 
                 </div>
             </div>
