--- a/index-second.html
+++ b/index-second.html
@@ -40,7 +40,7 @@
                     <a href="#" target="_blank"><span class="link-button color-2">Upcoming
                         </span></a>
                     <a href="#"><span class="link-button">All Group</span></a>
-                    <a href="" target="_blank"><span class="link-button">Blog</span></a>
+                    <a href="index-first.html" target="_blank"><span class="link-button">Blog</span></a>
 
                 </div>
             </div>
